2001-03-08  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (data_destroy): don't destroy widget, as this
	is called from widget destroy handler

2001-03-07  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_t): only emit the title changed signal if we
	have a valid title and were already in a title tag.

2001-03-07  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (delete_column_setup_undo): new undo
	setup for column delete
	(delete_column_undo_action_before): 1st undo action (insert after)
	(delete_column_undo_action_after): 2nd undo action (insert before)

	* htmlundo-action.c (html_undo_action_destroy): check for
	action->data before unref'ing them

	* htmltable.h (HTML_IS_TABLE): use HTML_CHECK_TYPE

	* htmltypes.h (HTML_CHECK_TYPE): new macro

	* htmlengine-edit-table.c (html_engine_insert_table_1_1): move 1
	step back to inserted table
	(insert_table_column): move to the 1st cell of inserted column
	(delete_table_column): fix cursor position after column removed
	(insert_table_column): extracted from
	html_engine_insert_table_column
	(delete_table_column): extracted from
	html_engine_delete_table_column
	(insert_column_setup_undo): new function
	(insert_column_undo_action): new undo action

	* htmltable.h (IS_HTML_TABLE): renamed to HTML_IS_TABLE

2001-03-06  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: make htmltablepriv.h a source

2001-03-06  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.{ms,emacs}: new bindings

	* gtkhtml.c (command): use new command

	* htmlengine-edit-table.c (html_engine_delete_table_column): new
	command implementation

	* gtkhtml.c (command): use new table methods

	* htmlengine-edit-table.c (html_engine_insert_table_column): new
	table command

	* htmltablepriv.h: new file for private HTMLTable methods

	* htmlengine-edit-cut-and-paste.c (html_engine_append_object): new
	method, splits at cursor upto level 'level' and appends object
	right there
